--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Enrique's Recipes</h1>
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
         <li><a href="recipes/caldo-de-res.html">Caldo de Res</a></li>
