--- a/recipes/caldo-de-res.html
+++ b/recipes/caldo-de-res.html
@@ -33,4 +33,4 @@
     </li>
     <li>Ladle soup into large bowls, including some meat, vegetables, and bones. Garnish with cilantro, jalapeños, and minced onion. Squeeze lime juice over soup and serve with radishes.</li>
 </ol>
-<a href="/index.html">Back to Home Page</a>
+<a href="../index.html">Back to Home Page</a>
