--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -22,4 +22,4 @@
     <li>Cover with foil and bake</li>
     <li>Let the lasagna rest before serving</li>
 </ol>
-<a href="/index.html">Back to Home Page</a>
+<a href="../index.html">Back to Home Page</a>
