--- a/recipes/margaritas.html
+++ b/recipes/margaritas.html
@@ -18,4 +18,4 @@
     <li>Pour kosher salt onto a plate. Rub the rim of a glass with lime wedge. Dip the rim of the glass into salt; fill the glass with margarita mixture; repeat for each serving.</li>
 </ol>
 
-<a href="/index.html">Back to Home Page</a>
+<a href="../index.html">Back to Home Page</a>
